[package]
name = "lang"
version = "0.1.0"
edition = "2021"
description = "Fast .lang loader for Node.js"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rayon = "1.10"
napi = { version = "2.14.4", features = ["napi6"], default-features = true }
napi-derive = "2.14.6"
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[package.metadata.napi]
name = "lang"
version = "0.1.0"
typescript = false
